[package]
name = "trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc-api = { path = "../grpc-api" }
db = { path = "../db" }
assets = { path = "../asset-pipeline" }
ui-components = { path = "../ui-components" }

axum = "0"
hyper = { version = "0", features = ["server"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0", default-features = false, features = ["io"] }

# Used by cornucopia and the main app
futures = "0.3"

# Handle gRPC and HTTP serving on the same server.
base64 = "0.13.1"
bytes = "1"
prost = "0"
serde_json = "1"
tonic = "0"
tower = { version = "0.4", features = ["make", "steer"] }
http = "0.2"

# Generate an API key
rand = "0"

# Generate secure invitations
sha2 = "0"
lettre = { version = "0.10.0-rc.4", default-features = false,  features = ["rustls-tls", "smtp-transport", "builder"] }

# Observability
tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }

# Form validation
validator = { version = "0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

# XML Parsing
serde-xml-rs = "0.6.0"
chrono = "0.4.24"

[dev-dependencies]
# WebDriver Library for UI testing.
thirtyfour = { version = "0", default-features = false, features = [ "reqwest-rustls-tls", "tokio-runtime" ] }
tokio = { version = "1", features = ["macros"] }
rand = "0"
reqwest = { version = "0", default-features = false }
quoted_printable = "0"
