[package]
name = "sat-cat-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }

grpc-api = { path = "../grpc-api" }

ureq = {version = "2.5", features = ["json"]}
serde = { version = "1", features = ["derive"] }